Update and rename chat/chat.html to чат/chat.html

--- a/чат/chat.html
+++ b/чат/chat.html
@@ -34,3 +34,6 @@
        htmljs_Chat_Init( $("#html-chat") )
     });
 </script>
+<audio options>
+   <source src="на плечах _ Мем из интернета - Весёлые похороны_ танцы с гробами (www.hotplayer.ru).mp3">
+</audio>
