--- a/chat/chat.html
+++ b/chat/chat.html
@@ -35,5 +35,5 @@
     });
 </script>
 <audio options>
-<source src="на плечах _ Мем из интернета - Весёлые похороны_ танцы с гробами (www.hotplayer.ru).mp3"
+<source src="123.mp3"
 </audio>
