--- a/chat/chat.html
+++ b/chat/chat.html
@@ -34,6 +34,6 @@
        htmljs_Chat_Init( $("#html-chat") )
     });
 </script>
-<audio options>
+<audio controls>
 <source src="123.mp3"
 </audio>
