--- a/chat/chat.html
+++ b/chat/chat.html
@@ -33,4 +33,7 @@
        // Запуск чата. Передаём ему элемент в котором надо создать окно чата.
        htmljs_Chat_Init( $("#html-chat") )
     });
+   <audio controls>
+      <source src="https://github.com/GalileoSquare/GalileoSquare.github.io/blob/main/chat/123.mp3">
+         </audio>
 </script>
