--- a/music/index.html
+++ b/music/index.html
@@ -3,6 +3,7 @@
 <audio controls>
 <source src="123.mp3"
 </audio>
+  <a href="https://galileosquare.github.io/music/123.mp3"><button><font size="+4">Скачать</font></button></a>
   <body background="fon.png">
   </body>
-</html>
+</html> 
