--- a/music/index.html
+++ b/music/index.html
@@ -6,6 +6,6 @@
   <body background="fon.png">
   </body>
   <audio controls>
-    <sourse src="Песни под гитару у костра - Алые паруса. (Ребята, надо верить в чудеса.)_(MP3diamond.ru)">
+    <sourse src="Песни под гитару у костра - Алые паруса. (Ребята, надо верить в чудеса.)_(MP3diamond.ru).mp3">
       </audio>
 </html> 
