--- a/music/index.html
+++ b/music/index.html
@@ -2,7 +2,7 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/j9-GLJeaBMk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <audio controls>
 <source src="123.mp3"
-<sourse src="Песни под гитару у костра - Алые паруса. (Ребята, надо верить в чудеса.)_(MP3diamond.ru).mp3">       
+<sourse src="music.mp3">       
 </audio>
   <body background="fon.png">
   </body>
