--- a/music/index.html
+++ b/music/index.html
@@ -1,7 +1,7 @@
 <html>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/j9-GLJeaBMk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <audio controls>
-<source src="123.mp3"
+<source src="123.mp3">
 <sourse src="music.mp3">       
 </audio>
   <body background="fon.png">
