--- a/music/index.html
+++ b/music/index.html
@@ -1,6 +1,7 @@
 <html>
 <audio controls>
-<source src="music.mp3">    
+<source balance
+volume="1500" src="music.mp3">    
 </audio>
   <body background="fon.png">
   </body>
