--- a/music/index.html
+++ b/music/index.html
@@ -1,7 +1,7 @@
 <html>
 <audio controls>
-<source balance
-volume="1500" src="music.mp3">    
+<source src="music.mp3"> 
+  <source src="123.mp3">
 </audio>
   <body background="fon.png">
   </body>
