--- a/music/index.html
+++ b/music/index.html
@@ -1,4 +1,6 @@
 <html>
+  <head>
+    <title><fonf color="red">123</font></title>
 <audio controls>
 <source src="music.mp3"> 
   <source src="123.mp3">
