--- a/music/index.html
+++ b/music/index.html
@@ -6,5 +6,7 @@
   <source src="123.mp3">
 </audio>
   <body background="fon.png">
+    <meta http-equiv="Expires"
+content="0">
   </body>
 </html> 
