--- a/music/index.html
+++ b/music/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title><fonf color="red">123</font></title>
+    <title>123</title>
 <audio controls>
 <source src="music.mp3"> 
   <source src="123.mp3">
