--- a/music/index.html
+++ b/music/index.html
@@ -1,12 +1,13 @@
 <html>
-  <head>
-    <title>123</title>
+  Танцы с гробом:
 <audio controls>
-<source src="music.mp3"> 
-  <source src="123.mp3">
+<source src="123.mp3"> 
 </audio>
+  <br>
+  <audio controls>
+    <source="music.mp3">
+  </audio>
   <body background="fon.png">
-    <meta http-equiv="Expires"
-content="0">
+    <meta http-equiv="Expires" content="0">
   </body>
 </html> 
