--- a/music/index.html
+++ b/music/index.html
@@ -4,6 +4,7 @@
 <source src="123.mp3"> 
 </audio>
   <br>
+  Ребята, надо верить в чудеса:
   <audio controls>
     <source="music.mp3">
   </audio>
