--- a/music/index.html
+++ b/music/index.html
@@ -8,7 +8,7 @@
   Ребята, надо верить в чудеса:
   <br>
   <audio controls>
-    <source="music.mp3">
+    <source src="music.mp3">
   </audio>
   <body background="fon.png">
     <meta http-equiv="Expires" content="0">
