--- a/music/index.html
+++ b/music/index.html
@@ -10,7 +10,7 @@
   <audio controls>
     <source src="music.mp3">
   </audio>
-  <body background="fon.png">
+  <body background="bees-hero.jpg">
     <meta http-equiv="Expires" content="0">
   </body>
 </html> 
