--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -3,7 +3,7 @@
   <title>bee-manity</title>
 </head>
 <
-<body background="bees-hero.jpg">
+<body background="bees-hero2.jpg">
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
