--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -3,13 +3,13 @@
   <title>bee-manity</title>
 </head>
 <
-<body background="bees-hero2.jpg">
+<body background="bees-hero.jpg">
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
     Наш ip: bee-manity.cf:25972
     <br>
-    Но перед этим нужно, чтобы вы смогли войти на наш серевер, нужно сообщить администратору об этом!
+    Но перед этим, чтобы вы смогли войти на наш серевер, нужно сообщить администратору об этом!
    <br>
     <body link="rad" alink="#fff000" vilink="#ffa500">
     Наш сервер дискорд: <a href="https://discord.gg/ArR7QdRN">Перейти</a>
