--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -3,7 +3,10 @@
   <title>bee-manity</title>
 </head>
 <
-<body background="bees-hero.jpg" 100%>
+body {
+  background: url bees-hero.jpg no-repeat;
+  background-size: 100%;
+}
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
