--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,11 +2,7 @@
 <head>
   <title>bee-manity</title>
 </head>
-<
-body {
-  background: url bees-hero.jpg no-repeat;
-  background-size: 100%;
-}
+<body backgroud="1.jpg">
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
