--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>bee-manity</title>
 </head>
-<body backgroud="1.jpg">
+<body background="1.jpg">
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
