--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>bee-manity</title>
 </head>
-<body background="bees-hero.jpg"  align="center" width="250" height="150">
+<body background="1234.jpg" width="100%">
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
