--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -10,7 +10,7 @@
     <br>
     Но перед этим, чтобы вы смогли войти на наш серевер, нужно сообщить администратору об этом!
    <br>
-    <body link="rad" alink="#fff000" vilink="#ffa500">
+    <body link="rad" alink="#fff000" vlink="#ffa500">
     Наш сервер дискорд: <a href="https://discord.gg/ArR7QdRN">Перейти</a>
     </body>
     </body>
