--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>bee-manity</title>
 </head>
-<body background="bees-hero.jpg" width="100%">
+<body background="122333.jpg" width="100%">
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
