--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>bee-manity</title>
 </head>
-<body background="122333.jpg" width="100%">
+<body background="maxresdefault.jpg" width="100%">
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
@@ -12,6 +12,7 @@
    <br>
     <body link="ff0000" alink="#fff000" vlink="#ff0000">
     Наш сервер дискорд: <a href="https://discord.gg/ArR7QdRN">Перейти</a>
+      </div>
     </body>
     </body>
     </font>
