--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,7 +2,11 @@
 <head>
   <title>bee-manity</title>
 </head>
-<body background="maxresdefault.jpg" width="100%" >
+<style>
+   body {
+    background: #c7b39b url(maxresdefault.jpg); /* Цвет фона и путь к файлу */
+    color: #fff; /* Цвет текста */
+   }
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
