--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,11 +2,7 @@
 <head>
   <title>bee-manity</title>
 </head>
-<style>
-   body {
-    background: #c7b39b url(maxresdefault.jpg); /* Цвет фона и путь к файлу */
-    color: #fff; /* Цвет текста */
-   }
+<body background="fon.css">
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
@@ -17,7 +13,6 @@
     <body link="ff0000" alink="#fff000" vlink="#ff0000">
     Наш сервер дискорд: <a href="https://discord.gg/ArR7QdRN">Перейти</a>
       </div>
-    </body>
     </body>
     </font>
   </div>
