--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,7 +2,11 @@
 <head>
   <title>bee-manity</title>
 </head>
-<body background="fon.css">
+<style type="text/css">
+   BODY {
+    background: url(maxresdefault.jpg) no-repeat 100%; /* Параметры фона */
+   }
+  </style>
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
@@ -13,7 +17,6 @@
     <body link="ff0000" alink="#fff000" vlink="#ff0000">
     Наш сервер дискорд: <a href="https://discord.gg/ArR7QdRN">Перейти</a>
       </div>
-    </body>
     </font>
   </div>
 
