--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,11 +2,7 @@
 <head>
   <title>bee-manity</title>
 </head>
-<style type="text/css">
-   BODY {
-    background: url(maxresdefault.jpg) no-repeat 100%; /* Параметры фона */
-   }
-  </style>
+<img src="maxresdefault.jpg"  align="center" width="100%" height="100%">
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
