--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,7 +2,8 @@
 <head>
   <title>bee-manity</title>
 </head>
-<img src="maxresdefault.jpg"  align="center" width="100%" height="100%">
+<body background="maxresdefault.jpg"  align="center" width="100%" height="100%">
+</body>
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
