--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>bee-manity</title>
 </head>
-<body background="maxresdefault.jpg"  align="center" width="200%" height="200%">
+<body background="maxresdefault.jpg"  width="200%" height="200%">
 </body>
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
