--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,8 +2,8 @@
 <head>
   <title>bee-manity</title>
 </head>
-<body background="maxresdefault.jpg"  width="200%" height="200%">
-</body>
+<img src="maxresdefault.jpg"  width="200%" height="200%">
+
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
