--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,8 +2,33 @@
 <head>
   <title>bee-manity</title>
 </head>
-<img src="maxresdefault.jpg"  width="200%" height="200%">
-
+<head>
+<title>Пример</title>
+<style type="text/css">
+body {
+background-color:BlanchedAlmond;
+}
+.fon_scroll {
+margin:0 auto;
+width:700px;
+height:800px;
+padding:30px;
+background-color:#ffffff;
+background-image:url(../images/7.jpg);
+background-repeat:no-repeat;
+background-attachment:fixed;
+background-position:40px 40px;
+}
+</style>
+</head>
+<body>
+<div class="fon_scroll">
+<p>Текст документа</p>
+<p>Текст документа</p>
+<p>Текст документа</p>
+<p>Текст документа</p>
+</div>
+</body>
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
