--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -14,7 +14,7 @@ width:700px;
 height:800px;
 padding:30px;
 background-color:#ffffff;
-background-image:url(../images/7.jpg);
+background-image:url(maxresdefault.jpg);
 background-repeat:no-repeat;
 background-attachment:fixed;
 background-position:40px 40px;
