--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -10,8 +10,8 @@ background-color:BlanchedAlmond;
 }
 .fon_scroll {
 margin:0 auto;
-width:700px;
-height:800px;
+width:100%;
+height:100%x;
 padding:30px;
 background-image:url(maxresdefault.jpg);
 background-repeat:no-repeat;
