--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -11,7 +11,7 @@ background-color:BlanchedAlmond;
 .fon_scroll {
 margin:0 auto;
 width:100%;
-height:100%x;
+height:100%;
 padding:30px;
 background-image:url(maxresdefault.jpg);
 background-repeat:no-repeat;
