--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -4,29 +4,7 @@
 </head>
 <head>
 <title>Пример</title>
-<style type="text/css">
-body {
-background-color:BlanchedAlmond;
-}
-.fon_scroll {
-margin:0 auto;
-width:100%;
-height:100%;
-padding:30px;
-background-image:url(maxresdefault.jpg);
-background-repeat:no-repeat;
-background-attachment:fixed;
-background-position:40px 40px;
-}
-</style>
-</head>
-<body>
-<div class="fon_scroll">
-<p>Текст документа</p>
-<p>Текст документа</p>
-<p>Текст документа</p>
-<p>Текст документа</p>
-</div>
+<link rel="stylesheet" href="style.css">
 </body>
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
