--- a/music/index.html
+++ b/music/index.html
@@ -12,5 +12,6 @@
   </audio>
   <body background="bees-hero.jpg">
     <meta http-equiv="Expires" content="0">
+    <link rel="stylesheet" href="style.css">
   </body>
 </html> 
