--- a/music/index.html
+++ b/music/index.html
@@ -87,8 +87,8 @@
     &nbsp <br>текст
     &nbsp <br>текст
     &nbsp <br>текст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтекст
-    &nbsp <br>
-    &nbsp <br>
+    &nbsp <br>текст<br>текст
+    &nbsp <br>текст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>текстv
     &nbsp <br>
     &nbsp <br>
     &nbsp <br>
