--- a/music/index.html
+++ b/music/index.html
@@ -12,7 +12,7 @@
   </audio>
   <body background="bees-hero.jpg">
     <meta http-equiv="Expires" content="0">
-    <img src="SAM_0021.JPG align="right">
+    <img src="SAM_0021.JPG" align="right">
     <link rel="stylesheet" href="style.css">
     <br>
     &nbsp
