--- a/music/index.html
+++ b/music/index.html
@@ -12,182 +12,10 @@
   </audio>
   <body background="bees-hero.jpg">
     <meta http-equiv="Expires" content="0">
-    <img src="SAM_0071.JPG" align="right" width="100" height="100">
+    <img src="SAM_0071.JPG" align="right" width="100" height="100" hspace="200">
     <link rel="stylesheet" href="style.css">
     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-    
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp
-     <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/w0D2nadzBSQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст
-    &nbsp <br>текст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтексттекст&nbspтекст
-    &nbsp <br>текст<br>текст
-    &nbsp <br>текст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>тексттекст<br>текстv
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp <br>
-    &nbsp
+    
   </body>
 </html> 
