--- a/music/index.html
+++ b/music/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="style.css">
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/w0D2nadzBSQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <video src="https://www.youtube.com/embed/w0D2nadzBSQ"></video>
+    <video>
+      <source src="https://www.youtube.com/embed/w0D2nadzBSQ"></video>
   </body>
 </html> 
