--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -14,7 +14,7 @@
     Но перед этим, чтобы вы смогли войти на наш серевер, нужно сообщить администратору об этом!
    <br>
     <body link="ff0000" alink="#fff000" vlink="#ff0000">
-    Наш сервер дискорд: <a href="https://discord.gg/ArR7QdRN">Перейти</a>
+    Наш сервер дискорд: <a href="https://discord.gg/dK6U39SeGz">Перейти</a>
       </div>
     </font>
   </div>
