--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -6,6 +6,16 @@
 <title>Пример</title>
 <link rel="stylesheet" href="style.css">
 </body>
+<!--LiveInternet counter--><a href="https://www.liveinternet.ru/click"
+target="_blank"><img id="licntA05E" width="88" height="15" style="border:0" 
+title="LiveInternet: показано число посетителей за сегодня"
+src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
+alt=""/></a><script>(function(d,s){d.getElementById("licntA05E").src=
+"https://counter.yadro.ru/hit?t26.5;r"+escape(d.referrer)+
+((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
+(s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
+";h"+escape(d.title.substring(0,150))+";"+Math.random()})
+(document,screen)</script><!--/LiveInternet-->
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
