--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -6,16 +6,7 @@
 <title>Пример</title>
 <link rel="stylesheet" href="style.css">
 </body>
-<!--LiveInternet counter--><a href="https://www.liveinternet.ru/click"
-target="_blank"><img id="licntA05E" width="88" height="15" style="border:0" 
-title="LiveInternet: показано число посетителей за сегодня"
-src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
-alt=""/></a><script>(function(d,s){d.getElementById("licntA05E").src=
-"https://counter.yadro.ru/hit?t26.5;r"+escape(d.referrer)+
-((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
-(s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
-";h"+escape(d.title.substring(0,150))+";"+Math.random()})
-(document,screen)</script><!--/LiveInternet-->
+<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=42598767&digit=style/plain/5/&reloads=0" alt="reliablecounter.com" title="reliablecounter.com" border="0"></a><br /><a href="http://https://www.reliablecounter.com/blog" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">reliablecounter blog</a>
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
     <br>
