--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <meta name="keywords" Content="би-манити, бии-манити, биманити, бииманити, би-меинти, бии-мэинти, bee-manity, beemanity, be-manity">
   <title>bee-manity</title>
 </head>
 <head>
