--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta name="keywords" Content="би-манити, бии-манити, биманити, бииманити, би-меинти, бии-мэинти, bee-manity, beemanity, be-manity">
+  <meta name="google-site-verification" content="W-TSwK29Ams8k1JppVXa_9w7dEGVJDbfVr5umDjL1cA" />
   <title>bee-manity</title>
 </head>
 <head>
