--- a/123galileosquare123/index.html
+++ b/123galileosquare123/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="W-TSwK29Ams8k1JppVXa_9w7dEGVJDbfVr5umDjL1cA" />
 <meta charset="utf-8">
 <title>Адаптивное фоновое изображение</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
