--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
-  <meta name="keywords" Content="би-манити, бии-манити, биманити, бииманити, би-меинти, бии-мэинти, bee-manity, beemanity, be-manity">
+  <meta name="keywords" Content="би-манити, бии-манити, биманити, бииманити, би-меинти, бии-мэинти, bee-manity, beemanity, be-manity, сервер-бии-манити">
   <meta name="google-site-verification" content="W-TSwK29Ams8k1JppVXa_9w7dEGVJDbfVr5umDjL1cA" />
+  <meta name="yandex-verification" content="6bd652272f2db2bf" />
   <title>bee-manity</title>
 </head>
 <head>
