--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
+<html>
 <head>
-  <meta name="yandex-verification" content="6bd652272f2db2bf" />
   <meta name="keywords" Content="би-манити, бии-манити, биманити, бииманити, би-меинти, бии-мэинти, bee-manity, beemanity, be-manity, сервер-бии-манити">
-
   <title>bee-manity</title>
 </head>
 <head>
 <title>Пример</title>
 <link rel="stylesheet" href="style.css">
+</head>
 </body>
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
@@ -18,9 +18,7 @@
    <br>
     <body link="ff0000" alink="#fff000" vlink="#ff0000">
     Наш сервер дискорд: <a href="https://discord.gg/dK6U39SeGz">Перейти</a>
-      </div>
-    </font>
+      
+      </font>
   </div>
-
-  
-  
+<html>
