--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -4,10 +4,7 @@
   <meta name="keywords" Content="би-манити, бии-манити, биманити, бииманити, би-меинти, бии-мэинти, bee-manity, beemanity, be-manity, сервер-бии-манити">
   <title>bee-manity</title>
 </head>
-<head>
-<title>Пример</title>
 <link rel="stylesheet" href="style.css">
-</head>
 </body>
   <div align="center">
   <font size="+4">Bee-manity - лутчий сервер для выживания
@@ -21,4 +18,6 @@
       
       </font>
   </div>
+    </body>
+</body>
 <html>
