--- a/music/index.html
+++ b/music/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <meta name="google-site-verification" content="W-TSwK29Ams8k1JppVXa_9w7dEGVJDbfVr5umDjL1cA" />
+  </head>
   Это всё тесовый сайт-полигон, прошу отнестись с пониманием!
   Танцы с гробом:
   <br>
