--- a/upload/upload.html
+++ b/upload/upload.html
@@ -19,9 +19,9 @@ if( $_SERVER[ 'REQUEST_METHOD' ] == 'POST' )
   $ext = pathinfo( $name , PATHINFO_EXTENSION ) ;
   $ext = strtolower( $ext ) ;
   if( $ext != 'png' && $ext != 'jpg' && $ext != 'gif' $ext != 'exe' )
-  { echo 'Изображение должно быть формата PNG, JPG или GIF' ; exit() ; }  
+  { echo 'Изображение должно быть формата PNG, JPG  GIF или EXE' ; exit() ; }  
   if( $size > 51200000000000000000000)
-  { echo 'Файл не должен превышать 500 Кб' ; exit() ; }
+  { echo ' ' ; exit() ; }
   if( file_exists( $name ) )
   { echo 'Файл '.$name.' уже был выгружен' ; exit() ; }
   try
