--- a/music/index.html
+++ b/music/index.html
@@ -15,7 +15,10 @@
   <audio controls>
     <source src="music.mp3">
   </audio>
-  <body background="bees-hero.jpg">
+  <body>
+    <?php
+date('i/s')
+?>
     <meta http-equiv="Expires" content="0">
     <img src="SAM_0071.JPG" align="right" width="200" height="200" hspace="1000">
     <img src="SAM_0083.JPG" align="right" width="200" hight="200" hsace="2000" vspace="-500" >
