--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="google-site-verification" content="PUdgf_eOzaXDzqcKgkgk2ZFxhcwRaQmtck5T4lw2tEI" />
-  <meta name="keywords" Content="би-манити, бии-манити, биманити, бииманити, би-меинти, бии-мэинти, bee-manity, beemanity, be-manity, сервер-бии-манити">
+  <meta name="keywords" Content="би-манити, бии-манити, биманити, бииманити, би-меинти, бии-мэинти, bee-manity, beemanity, be-manity, сервер-бии-манити 123test123qqq">
   <title>bee-manity</title>
 </head>
 <link rel="stylesheet" href="style.css">
