--- a/chat/chat.html
+++ b/chat/chat.html
@@ -1,4 +1,10 @@
-﻿<script type="text/javascript" src="jquery.min.js" ></script>
+<html>
+   <head>
+      <meta name="google-site-verification" content="W-TSwK29Ams8k1JppVXa_9w7dEGVJDbfVr5umDjL1cA" />
+      <title>Чат</title>
+   </head>
+   <body>
+<script type="text/javascript" src="jquery.min.js" ></script>
 <script type="text/javascript" src="CometServerApi.js" ></script>
 <script type="text/javascript" src="html_chat.js" ></script>
 <link rel="stylesheet" type="text/css" href="html_chat.css"></link>
@@ -34,3 +40,5 @@
        htmljs_Chat_Init( $("#html-chat") )
     });
 </script>
+   </body>
+</html>
