--- a/chat/chat.html
+++ b/chat/chat.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>Чат</title>
+      <title>Онлайн чат без регистрации</title>
    </head>
    <body>
 <script type="text/javascript" src="jquery.min.js" ></script>
