--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </body>
   <div align="center">
-  <font size="+4">Bee-manity - лутчий сервер для выживания
+  <font size="+4">Bee-manity - лучший сервер для выживания!
     <br>
     Наш ip: bee-manity.cf:25972
     <br>
