--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -3,7 +3,7 @@
   <title>bee-manity</title>
 </head>
 <link rel="stylesheet" href="style.css">
-</body>
+<body>
   <div align="center">
   <font size="+4">Bee-manity - лучший сервер для выживания!
     <br>
@@ -16,6 +16,5 @@
       
       </font>
   </div>
-    </body>
 </body>
 </html>
