--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <meta neme="keywords" Content="testmusicsite">
+  <meta name="description" content="bee-manity лучший сервер для выживания с друзьями!">
   <title>bee-manity</title>
 </head>
 <body>
