--- a/fnaf_3/index.html
+++ b/fnaf_3/index.html
@@ -8,6 +8,6 @@
         Скачать fnaf 3 бесплатно оригинал
         </font>
       <br>
-      <a href="https://dwdisc.com/fdl/af7b2782-637e-428a-af07-059ace073003/Five-Nights-at-Freddys-3-v2-0.apk"><button><img src="button"></button></a>
+      <a href="https://dwdisc.com/fdl/af7b2782-637e-428a-af07-059ace073003/Five-Nights-at-Freddys-3-v2-0.apk"><button><img src="button.jpg"></button></a>
       </body>
     </html>
