--- a/fnaf_3/index.html
+++ b/fnaf_3/index.html
@@ -2,6 +2,16 @@
   <head>
     <title>Скачать fnaf 3 оригинал бесплатно</title>
   </head>
+  <style>
+					body {
+				background-image: url(шьп4.jpg);
+				background-position: center center;
+				background-repeat: no-repeat;
+				background-attachment: fixed;
+				background-size: cover;
+				background-color: #646464;
+					}
+				</style>
   <body>
     <center>
       <font size="+4">
