--- a/fnaf_3/index.html
+++ b/fnaf_3/index.html
@@ -4,7 +4,7 @@
   </head>
   <style>
 					body {
-				background-image: url(шьп4.jpg);
+				background-image: url(img4.jpg);
 				background-position: center center;
 				background-repeat: no-repeat;
 				background-attachment: fixed;
