--- a/fnaf_3/index.html
+++ b/fnaf_3/index.html
@@ -14,7 +14,7 @@
 				</style>
   <body>
     <center>
-      <font size="+4">
+      <font size="+4" color="#ffffff">
         Скачать fnaf 3 бесплатно оригинал
         </font>
       <br>
