--- a/fnaf_3/index.html
+++ b/fnaf_3/index.html
@@ -19,5 +19,6 @@
         </font>
       <br>
       <a href="https://dwdisc.com/fdl/af7b2782-637e-428a-af07-059ace073003/Five-Nights-at-Freddys-3-v2-0.apk"><button><img src="i.jpg" width="300" height="100"></button></a>
+	    <a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=1234567dr6utifd76sduftigy&digit=style/plain/5/&reloads=0" alt="reliablecounter.com" title="reliablecounter.com" border="0"></a><br /><a href="http://relia" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">reliablecounter.com</a>
       </body>
     </html>
