--- a/music/index.html
+++ b/music/index.html
@@ -27,5 +27,6 @@ date('i/s')
     <iframe width="560" height="315" src="https://www.youtube.com/embed/w0D2nadzBSQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <video>
       <source src="https://www.youtube.com/embed/w0D2nadzBSQ"></video>
+    <iframe width="1010" height="568" src="https://www.youtube.com/embed/tTTtc9T0QM8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html> 
