--- a/chat/chat.html
+++ b/chat/chat.html
@@ -3,6 +3,9 @@
       <title>Онлайн чат без регистрации</title>
    </head>
    <body>
+      <center>
+         Сам чат!
+      </center>
 <script type="text/javascript" src="jquery.min.js" ></script>
 <script type="text/javascript" src="CometServerApi.js" ></script>
 <script type="text/javascript" src="html_chat.js" ></script>
