--- a/chat/chat.html
+++ b/chat/chat.html
@@ -4,7 +4,7 @@
    </head>
    <body>
       <center>
-         Сам чат!
+         <font size="+2">Дискорд создателя: Галилео#7308</font>
       </center>
 <script type="text/javascript" src="jquery.min.js" ></script>
 <script type="text/javascript" src="CometServerApi.js" ></script>
