--- a/cursor/cursor.html
+++ b/cursor/cursor.html
@@ -9,7 +9,7 @@
   width: 800px; height: 600px;
 }
 .cursor {
-cursor: url("2.ani"), pointer;	
+cursor: url("cursor.cur"), pointer;	
 }
 body {
     background-image: url(fon.jpg);
