--- a/bee-manity/index.html
+++ b/bee-manity/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta neme="keywords" Content="testmusicsite">
   <meta name="description" content="bee-manity лучший сервер для выживания с друзьями!">
+<meta name="google-site-verification" content="PUdgf_eOzaXDzqcKgkgk2ZFxhcwRaQmtck5T4lw2tEI" />
   <title>bee-manity</title>
 </head>
 <body>
