--- a/GalileoRUS/index.html
+++ b/GalileoRUS/index.html
@@ -1,5 +1,6 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="Keywords" content="Галилео, Кузнецк, Кузнецкий, ютубер, блогер, фурри, furry, Galileo, Kuznetsky, GalileoKuznetsky, Galileo_Kuznetsky, Галя, фото, с, Галей, прогромист, программист, IT, ИТ, айтишник, специалист">
+  <meta name="yandex-verification" content="400845649e6370f6" />
 </head>
 <img src="Galileo.png"></img>
